--- a/common/css/common.css
+++ b/common/css/common.css
@@ -22,6 +22,50 @@
 
 .con_list_item svg { max-width: 100%; }
 
+.con_list_item .con_link.ty_ani { -webkit-transform-origin: center center; transform-origin: center center; }
+
+@-webkit-keyframes link_ani { 0% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  5% { -webkit-transform: rotate(4deg);
+    transform: rotate(4deg); }
+  10% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  15% { -webkit-transform: rotate(-4deg);
+    transform: rotate(-4deg); }
+  20% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  75% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  85% { -webkit-transform: rotate(4deg);
+    transform: rotate(4deg); }
+  90% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  95% { -webkit-transform: rotate(-4deg);
+    transform: rotate(-4deg); }
+  100% { -webkit-transform: rotate(0);
+    transform: rotate(0); } }
+
+@keyframes link_ani { 0% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  5% { -webkit-transform: rotate(4deg);
+    transform: rotate(4deg); }
+  10% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  15% { -webkit-transform: rotate(-4deg);
+    transform: rotate(-4deg); }
+  20% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  75% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  85% { -webkit-transform: rotate(4deg);
+    transform: rotate(4deg); }
+  90% { -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  95% { -webkit-transform: rotate(-4deg);
+    transform: rotate(-4deg); }
+  100% { -webkit-transform: rotate(0);
+    transform: rotate(0); } }
+
 .con_list_item1 { background-image: url(../../images/main/BG_story.jpg); background-color: #8780bc; }
 
 .con_list_item1::before { background-color: #8780bc; }
@@ -56,6 +100,8 @@
 
 .con_list_item2 .lottie_box { position: absolute; width: 32%; left: 11%; top: 20%; }
 
+.con_list_item2 .lottie_box .lottie_link { position: absolute; width: 90%; height: 49%; left: 0; top: 0; }
+
 .con_list_item2 .main_id_card { -webkit-transform: translate(543px, 75px); transform: translate(543px, 75px); }
 
 .con_list_item2 .reporter_card_logo { margin-bottom: 6px; }
@@ -76,7 +122,7 @@
 
 .con_list_item2 .reporter_card_id .logo img { height: 18px; }
 
-.con_list_item2 .svg_cont3 { position: absolute; width: 19%; left: 12.5%; top: 48.5%; }
+.con_list_item2 .svg_cont3 { position: absolute; width: 18.4%; left: 12.5%; top: 48.5%; }
 
 .con_list_item2 .press_set { display: block; color: #fff; text-align: left; }
 
@@ -114,17 +160,43 @@
 
 .con_list_item3::before { background-color: #55c1dd; }
 
-.con_list_item3 .lottie_box { width: 370px; height: 391px; -webkit-transform: translate(701px, 358px); transform: translate(701px, 358px); }
+.con_list_item3 .play_tv_box { -webkit-transform: translate(370px, 79.5px); transform: translate(370px, 79.5px); }
 
-.con_list_item3 .lottie_box .lottie_player { width: 100%; height: auto; }
+.con_list_item3 .play_tv { width: 100%; height: 100%; }
+
+.con_list_item3 .play_tv_link { display: block; width: 100%; height: 100%; }
+
+.con_list_item3 .play_tv img { -o-object-fit: cover; object-fit: cover; width: 100%; height: 100%; }
+
+.con_list_item3 .lottie_box { position: absolute; width: 32%; right: 7%; bottom: 0; }
 
 .con_list_item4 { background-color: #73b77e; background-image: url(../../images/main/BG_earth.jpg); }
 
 .con_list_item4::before { background-color: #73b77e; }
 
-.con_list_item4 .lottie_box1 { width: 360px; height: 360px; -webkit-transform: translate(41px, 149px); transform: translate(41px, 149px); }
+.con_list_item4 .lottie_box { position: absolute; width: 28%; top: 23.5%; }
 
-.con_list_item4 .lottie_box2 { width: 360px; height: 360px; -webkit-transform: translate(335px, 149px); transform: translate(335px, 149px); }
+.con_list_item4 .lottie_box1 { left: 5.5%; }
+
+.con_list_item4 .lottie_box2 { left: 30%; }
+
+.con_list_item4 .earth_notice { position: absolute; width: 100%; height: 100%; left: 0; top: 0; font-size: 16px; }
+
+.con_list_item4 .earth_notice_wrap { position: absolute; width: 34%; height: 36%; overflow: hidden; right: 3.3%; bottom: 10%; }
+
+.con_list_item4 .earth_notice_link { display: block; height: 100%; width: 100%; text-align: center; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+.con_list_item4 .earth_notice_tit { display: block; margin: 26px 0 22px; font-size: 24px; line-height: 1.2; color: #3cb371; }
+
+.con_list_item4 .earth_notice_cont { font-size: 16px; line-height: 24px; height: 72px; padding: 0 20px; }
+
+.con_list_item4 .earth_notice_paging { position: absolute; width: 100%; left: 0; bottom: 13%; z-index: 10; }
+
+.con_list_item4 .earth_notice_paging .swiper-pagination-bullet { width: 1em; height: 1em; margin: 0 0.4em; }
+
+.con_list_item4 .earth_notice_paging .swiper-pagination-bullet-active { background-color: #3cb371; }
+
+@media (max-width: 1160px) { .con_list_item4 .earth_notice { font-size: 1.5vw; } }
 
 .main_wrap { overflow: hidden; }
 
@@ -1913,12 +1985,12 @@
 
 @media (max-width: 767px) { .m_only { display: block; }
   #content.ty_sub { padding-top: 100px; }
-  #container.main { padding-top: 60px; }
   #header.header ~ #container.sub_m { padding-top: 100px; }
   #container.sub { padding-top: 60px; padding-bottom: 0; min-height: calc(100vh - 189px); }
   #container.sub .inner { padding: 0; }
   .inner { padding: 0 20px; }
   .header { min-width: auto; position: fixed; padding-bottom: 0; border-bottom: none; -webkit-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.05); box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.05); /* @at-root .main &.bgon { background-color: #fff; .header_top { .logo { background-image: url(../../images/LOGO.png); } } .nav_area { .nav_list li a { color: #212121; } } .header_util { .btn_mypage { background-image: url(../../images/ico/ico_mem_b.svg); } .btn_lm { .bar_box .bar { background-color: #212121; } } } } */ }
+  .main .header { -webkit-box-shadow: none; box-shadow: none; }
   .header_top { padding: 0 20px; padding-right: 20px; }
   .header_top_inner { height: 60px; }
   .header_top_inner .logo img { height: 29px; }
