--- a/common/css/common.css
+++ b/common/css/common.css
@@ -20,7 +20,7 @@
 
 .con_list_item::before { content: ''; position: absolute; width: 100%; height: 100vh; top: 100%; }
 
-.con_list_item .svg_box { max-width: 100%; width: 1160px; position: relative; }
+.con_list_item .svg_box { max-width: 100%; width: 1160px; position: relative; padding: 0 140px; }
 
 .con_list_item .svg_box_inner { padding-top: 62.0689%; position: relative; }
 
@@ -32,7 +32,10 @@
 
 .con_list_item .svg_box .svg_cont.m_only { display: none; }
 
-@media (max-width: 767px) { .con_list_item .svg_box .svg_cont.pc_only { display: none; }
+@media (max-width: 1200px) { .con_list_item .svg_box { padding: 0; padding-top: 100px; } }
+
+@media (max-width: 767px) { .con_list_item .svg_box { padding-top: 0; }
+  .con_list_item .svg_box .svg_cont.pc_only { display: none; }
   .con_list_item .svg_box .svg_cont.m_only { display: block; } }
 
 .con_list_item svg { max-width: 100%; }
@@ -87,19 +90,27 @@
 
 .con_list_item1 .lottie_box { position: absolute; width: 34%; left: 55%; bottom: 8%; }
 
+@media (max-width: 767px) { .con_list_item1 .lottie_box { width: 72%; left: 10%; bottom: 4%; } }
+
 .con_list_item1 .main_story_list { display: -webkit-box; display: -ms-flexbox; display: flex; text-align: left; }
 
 .con_list_item1 .main_story_list_item { width: 50%; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 .con_list_item1 .main_story_list_item:nth-child(odd) { padding-right: 32px; }
 
+@media (max-width: 767px) { .con_list_item1 .main_story_list_item:nth-child(odd) { padding-right: 25px; } }
+
 .con_list_item1 .main_story_list_item:nth-child(even) { padding-left: 32px; }
+
+@media (max-width: 767px) { .con_list_item1 .main_story_list_item:nth-child(even) { padding-left: 25px; } }
 
 .con_list_item1 .main_story_list_link { display: block; padding-top: 5px; }
 
 .con_list_item1 .main_story_list .sc_thumb { padding-top: 0; position: static; }
 
 .con_list_item1 .main_story_list .sc_thumb_img { position: static; width: 128px; height: 128px; }
+
+@media (max-width: 767px) { .con_list_item1 .main_story_list .sc_thumb_img { width: 100px; height: 100px; } }
 
 .con_list_item1 .main_story_list .tit { display: block; font-size: 14px; font-weight: 500; margin-top: 4px; line-height: 1.2; }
 
@@ -117,7 +128,9 @@
 
 .con_list_item2 .lottie_box .lottie_link { position: absolute; width: 90%; height: 49%; left: 0; top: 0; }
 
-.con_list_item2 .main_id_card { -webkit-transform: translate(543px, 75px); transform: translate(543px, 75px); }
+@media (max-width: 767px) { .con_list_item2 .lottie_box { width: 76%; left: 8%; top: 22%; } }
+
+.con_list_item2 .main_id_card { -webkit-transform: translate(39px, 19px); transform: translate(39px, 19px); }
 
 .con_list_item2 .reporter_card_logo { margin-bottom: 6px; }
 
@@ -137,8 +150,6 @@
 
 .con_list_item2 .reporter_card_id .logo img { height: 18px; }
 
-.con_list_item2 .svg_cont3 { position: absolute; width: 18.4%; left: 12.5%; top: 48.5%; }
-
 .con_list_item2 .press_set { display: block; color: #fff; text-align: left; }
 
 .con_list_item2 .press_set_tit { display: block; font-size: 19px; font-weight: 500; font-family: 'Godo'; line-height: 1.2; }
@@ -152,6 +163,16 @@
 .con_list_item2 .press_set .writer_set .level_arrow { display: none; }
 
 .con_list_item2 .svg_cont2 { position: absolute; width: 55%; right: 10%; bottom: 5%; }
+
+@media (max-width: 767px) { .con_list_item2 .svg_cont2 { max-width: none; width: 160%; right: -5%; bottom: -4%; } }
+
+.con_list_item2 .svg_cont3 { position: absolute; width: 18.4%; left: 12.5%; top: 48.5%; }
+
+@media (max-width: 767px) { .con_list_item2 .svg_cont3 { width: 44%; left: 12.5%; top: 45%; } }
+
+.con_list_item2 .svg_cont4 { position: absolute; width: 24%; height: 47%; top: 8.5%; left: 42%; }
+
+@media (max-width: 767px) { .con_list_item2 .svg_cont4 { display: none; } }
 
 .con_list_item2 .discussion_wrap { -webkit-transform: translate(477px, 131px); transform: translate(477px, 131px); }
 
@@ -170,6 +191,14 @@
 .con_list_item2 .discussion_box_result_item .result_percent { margin-right: 8px; }
 
 .con_list_item2 .discussion_box_result_item span { font-weight: 500; }
+
+.con_list_item2 .con_img { position: absolute; }
+
+.con_list_item2 .con_img1 { width: 10%; top: 13%; left: 6.5%; }
+
+.con_list_item2 .con_img2 { width: 14%; top: 12%; right: 19%; }
+
+@media (max-width: 767px) { .con_list_item2 .con_img { display: none; } }
 
 .con_list_item3 { background-color: #55c1dd; background-image: url(../../images/main/BG_play.jpg); }
 
@@ -207,9 +236,15 @@
 
 .con_list_item4 .lottie_box { position: absolute; width: 28%; top: 23.5%; }
 
+.con_list_item4 .lottie_box_link { position: absolute; width: 50%; height: 50%; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+
 .con_list_item4 .lottie_box1 { left: 5.5%; }
 
+@media (max-width: 767px) { .con_list_item4 .lottie_box1 { width: 80%; left: -12%; top: 34%; } }
+
 .con_list_item4 .lottie_box2 { left: 30%; }
+
+@media (max-width: 767px) { .con_list_item4 .lottie_box2 { display: none; } }
 
 .con_list_item4 .con_link { position: absolute; }
 
@@ -217,9 +252,13 @@
 
 .con_list_item4 .con_link1 { width: 27%; left: 19%; bottom: 8%; }
 
+@media (max-width: 767px) { .con_list_item4 .con_link1 { display: none; } }
+
 .con_list_item4 .earth_notice { position: absolute; width: 100%; height: 100%; left: 0; top: 0; font-size: 16px; }
 
 .con_list_item4 .earth_notice_wrap { position: absolute; width: 34%; height: 36%; overflow: hidden; right: 3.3%; bottom: 10%; }
+
+@media (max-width: 767px) { .con_list_item4 .earth_notice_wrap { width: 60%; height: 25%; bottom: 9%; right: 0; } }
 
 .con_list_item4 .earth_notice_link { display: block; height: 100%; width: 100%; text-align: center; -webkit-box-sizing: border-box; box-sizing: border-box; position: relative; }
 
@@ -227,11 +266,17 @@
 
 .con_list_item4 .earth_notice_link .txt_box { padding-top: 26px; }
 
+@media (max-width: 767px) { .con_list_item4 .earth_notice_link .txt_box { padding-top: 15px; } }
+
 .con_list_item4 .earth_notice_tit { display: inline-block; margin-bottom: 20px; font-size: 24px; line-height: 1.2; color: #3cb371; }
+
+@media (max-width: 767px) { .con_list_item4 .earth_notice_tit { font-size: 36px; } }
 
 .con_list_item4 .earth_notice_tit::after { content: ''; display: block; width: 100%; height: 8px; background-color: #ffffb9; margin-top: -10px; }
 
 .con_list_item4 .earth_notice_cont { font-size: 16px; line-height: 24px; height: 72px; padding: 0 20px; }
+
+@media (max-width: 767px) { .con_list_item4 .earth_notice_cont { font-size: 20px; line-height: 30px; height: 90px; } }
 
 .con_list_item4 .earth_notice_paging { position: absolute; width: 100%; left: 0; bottom: 13%; z-index: 10; }
 
@@ -241,11 +286,45 @@
 
 @media (max-width: 1160px) { .con_list_item4 .earth_notice { font-size: 1.5vw; } }
 
-.con_list_paging { position: absolute; left: -300px; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
+.con_list_paging { position: absolute; left: 0; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
 
-.con_list_paging_wrap { position: absolute; width: 100%; max-width: 1160px; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); top: 50%; z-index: 99; }
+.con_list_paging_wrap { position: absolute; width: 100%; max-width: 1600px; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); top: 50%; z-index: 99; }
 
-.con_list_paging .swiper-pagination-bullet { display: block; width: auto; height: auto; background-color: transparent; opacity: 1; position: relative; }
+@media (max-width: 1600px) { .con_list_paging_wrap { max-width: none; -webkit-transform: none; transform: none; left: 40px; right: 40px; width: auto; } }
+
+@media (max-width: 1200px) { .con_list_paging_wrap { top: 120px; left: auto; right: auto; width: 100%; } }
+
+@media (max-width: 1200px) { .con_list_paging { position: relative; left: 0; top: 0; -webkit-transform: none; transform: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; } }
+
+.con_list_paging .swiper-pagination-bullet { display: block; width: 130px; height: 90px; background-color: transparent; opacity: 1; position: relative; -webkit-transition: all .2s ease-in-out; transition: all .2s ease-in-out; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; outline: none; }
+
+@media (max-width: 1200px) { .con_list_paging .swiper-pagination-bullet { width: 90px; height: auto; margin: 0 15px; } }
+
+.con_list_paging .swiper-pagination-bullet.con_nav_item + .con_nav_item { margin-top: 10px; }
+
+@media (max-width: 1200px) { .con_list_paging .swiper-pagination-bullet.con_nav_item + .con_nav_item { margin-top: 0; } }
+
+.con_list_paging .swiper-pagination-bullet.con_nav_item1, .con_list_paging .swiper-pagination-bullet.con_nav_item4 { -webkit-transform: translateX(30px); transform: translateX(30px); }
+
+@media (max-width: 1200px) { .con_list_paging .swiper-pagination-bullet.con_nav_item1, .con_list_paging .swiper-pagination-bullet.con_nav_item4 { -webkit-transform: translateX(0) translateY(15px); transform: translateX(0) translateY(15px); } }
+
+.con_list_paging .swiper-pagination-bullet .nav_con_img { width: 100%; -webkit-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
+
+.con_list_paging .swiper-pagination-bullet .ico_pobi { position: absolute; width: 35%; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); -webkit-transition: all .2s ease-in-out; transition: all .2s ease-in-out; z-index: -1; }
+
+.con_list_paging .swiper-pagination-bullet .ico_pobi img { width: 100%; }
+
+.con_list_paging .swiper-pagination-bullet-active { height: 162px; }
+
+@media (max-width: 1200px) { .con_list_paging .swiper-pagination-bullet-active { height: 90px; width: 130px; } }
+
+.con_list_paging .swiper-pagination-bullet-active .nav_con_img { -webkit-transform: scale(1.8); transform: scale(1.8); }
+
+@media (max-width: 1200px) { .con_list_paging .swiper-pagination-bullet-active .nav_con_img { -webkit-transform: scale(1); transform: scale(1); } }
+
+.con_list_paging .swiper-pagination-bullet-active .ico_pobi { left: 100%; top: 6%; -webkit-transform: translate(0, 0) scale(2); transform: translate(0, 0) scale(2); }
+
+@media (max-width: 1200px) { .con_list_paging .swiper-pagination-bullet-active .ico_pobi { left: 70%; top: -5%; -webkit-transform: translate(0, 0) scale(1); transform: translate(0, 0) scale(1); } }
 
 .main_wrap { overflow: hidden; }
 
@@ -281,7 +360,10 @@
 
 @media (max-width: 1920px) { .con_list_item { background-size: cover; } }
 
-@media (max-width: 767px) { .main_board { display: block; }
+@media (max-width: 767px) { .con_list { display: block; }
+  .con_list .con_list_wrapper { display: block; }
+  .con_list_paging_wrap { display: none; }
+  .main_board { display: block; }
   .main_board_sec { width: 100%; }
   .main_board_notice { padding-right: 0; }
   .main_board_community { padding: 0; margin-top: 30px; }
