--- a/common/css/common.css
+++ b/common/css/common.css
@@ -16,6 +16,14 @@
 
 @media (max-width: 767px) { .con_list_item { padding: 0; } }
 
+.con_list_item_tit { display: none; height: 14%; position: absolute; top: 12.5%; width: 100%; text-align: center; left: 0; z-index: 99; }
+
+@media (max-width: 767px) { .con_list_item_tit { display: block; } }
+
+.con_list_item_tit a { height: 100%; display: inline-block; }
+
+.con_list_item_tit a img { height: 100%; }
+
 .con_list_item .lottie_box .lottie_player { width: 100%; height: auto; }
 
 .con_list_item::before { content: ''; position: absolute; width: 100%; height: 100vh; top: 100%; }
@@ -88,6 +96,8 @@
 
 .con_list_item1::before { background-color: #8780bc; }
 
+@media (max-width: 767px) { .con_list_item1 { background-image: url(../../images/main/BG_story_m.png); } }
+
 .con_list_item1 .lottie_box { position: absolute; width: 34%; left: 55%; bottom: 8%; }
 
 @media (max-width: 767px) { .con_list_item1 .lottie_box { width: 72%; left: 10%; bottom: 4%; } }
@@ -122,13 +132,15 @@
 
 .con_list_item2::before { background-color: #ee869d; }
 
+@media (max-width: 767px) { .con_list_item2 { background-image: url(../../images/main/BG_press_m.png); } }
+
 .con_list_item2 .img_item { position: absolute; width: 15.8%; left: 22.5%; bottom: 6.5%; }
 
 .con_list_item2 .lottie_box { position: absolute; width: 32%; left: 11%; top: 20%; }
 
 .con_list_item2 .lottie_box .lottie_link { position: absolute; width: 90%; height: 49%; left: 0; top: 0; }
 
-@media (max-width: 767px) { .con_list_item2 .lottie_box { width: 76%; left: 8%; top: 22%; } }
+@media (max-width: 767px) { .con_list_item2 .lottie_box { width: 74%; left: 6%; top: 25%; } }
 
 .con_list_item2 .main_id_card { -webkit-transform: translate(39px, 19px); transform: translate(39px, 19px); }
 
@@ -164,11 +176,11 @@
 
 .con_list_item2 .svg_cont2 { position: absolute; width: 55%; right: 10%; bottom: 5%; }
 
-@media (max-width: 767px) { .con_list_item2 .svg_cont2 { max-width: none; width: 160%; right: -5%; bottom: -4%; } }
+@media (max-width: 767px) { .con_list_item2 .svg_cont2 { max-width: none; width: 154%; right: -5%; bottom: -4%; } }
 
 .con_list_item2 .svg_cont3 { position: absolute; width: 18.4%; left: 12.5%; top: 48.5%; }
 
-@media (max-width: 767px) { .con_list_item2 .svg_cont3 { width: 44%; left: 12.5%; top: 45%; } }
+@media (max-width: 767px) { .con_list_item2 .svg_cont3 { width: 43%; left: 10%; top: 47.5%; } }
 
 .con_list_item2 .svg_cont4 { position: absolute; width: 24%; height: 47%; top: 8.5%; left: 42%; }
 
@@ -204,6 +216,8 @@
 
 .con_list_item3::before { background-color: #55c1dd; }
 
+@media (max-width: 767px) { .con_list_item3 { background-image: url(../../images/main/BG_play_m.png); } }
+
 .con_list_item3 .play_tv_box { -webkit-transform: translate(370px, 79.5px); transform: translate(370px, 79.5px); }
 
 .con_list_item3 .m_only .play_tv_box { -webkit-transform: translate(54px, 231px); transform: translate(54px, 231px); }
@@ -233,6 +247,8 @@
 .con_list_item4 { background-color: #73b77e; background-image: url(../../images/main/BG_earth.jpg); }
 
 .con_list_item4::before { background-color: #73b77e; }
+
+@media (max-width: 767px) { .con_list_item4 { background-image: url(../../images/main/BG_earth_m.png); } }
 
 .con_list_item4 .lottie_box { position: absolute; width: 28%; top: 23.5%; }
 
