--- a/common/css/common.css
+++ b/common/css/common.css
@@ -1297,7 +1297,7 @@
   .alert_setting_item .tit { font-size: 15px; }
   .alert_setting_item .txt { font-size: 12px; } }
 
-.tab_bar { display: none; position: fixed; width: 100%; left: 0; bottom: 0; background-color: #fff; z-index: 9999; -webkit-box-shadow: 0 -3px 6px 0 rgba(0, 0, 0, 0.07); box-shadow: 0 -3px 6px 0 rgba(0, 0, 0, 0.07); -webkit-transition: bottom .3s ease-in-out; transition: bottom .3s ease-in-out; }
+.tab_bar { display: none; position: fixed; width: 100%; left: 0; bottom: 0; background-color: #fff; z-index: 9998; -webkit-box-shadow: 0 -3px 6px 0 rgba(0, 0, 0, 0.07); box-shadow: 0 -3px 6px 0 rgba(0, 0, 0, 0.07); -webkit-transition: bottom .3s ease-in-out; transition: bottom .3s ease-in-out; }
 
 .tab_bar.nav-down { bottom: -80px; }
 
@@ -1488,6 +1488,8 @@
 .menu_dep3_link.on { color: #f6c34b; font-weight: bold; border-bottom: 1px solid #f6c34b; }
 
 .footer { background-color: #f5f5f5; padding: 20px 16px; text-align: center; }
+
+.footer.mobile { padding-bottom: 80px; }
 
 .footer_menu { font-size: 0; margin-bottom: 12px; }
 
