--- a/common/scss/common.scss
+++ b/common/scss/common.scss
@@ -425,7 +425,9 @@
     background-color: #f5f5f5;
     padding: 20px 16px;
     text-align: center;
-
+    &.mobile {
+        padding-bottom: 80px;
+    }
     &_menu {
         font-size: 0;
         margin-bottom: 12px;
