--- a/common/css/common.css
+++ b/common/css/common.css
@@ -128,6 +128,14 @@
 
 .con_list_item1 .main_story_list .sc_tag { display: block; -webkit-transform: translateY(9px); transform: translateY(9px); margin-top: -13px; }
 
+.con_list_item1 .con_link { position: absolute; }
+
+.con_list_item1 .con_link1 { width: 10%; height: 10%; left: 31%; bottom: 36%; }
+
+.con_list_item1 .con_link2 { width: 9%; height: 17%; right: 13.5%; top: 16%; }
+
+@media (max-width: 767px) { .con_list_item1 .con_link { display: none; } }
+
 .con_list_item2 { background-color: #ee869d; background-image: url(../../images/main/BG_press.jpg); }
 
 .con_list_item2::before { background-color: #ee869d; }
@@ -270,6 +278,10 @@
 
 @media (max-width: 767px) { .con_list_item4 .con_link1 { display: none; } }
 
+.con_list_item4 .con_link2 { width: 12%; height: 41%; right: 37%; bottom: 5%; }
+
+@media (max-width: 767px) { .con_list_item4 .con_link2 { width: 23%; height: 29%; right: 60%; bottom: 5%; } }
+
 .con_list_item4 .earth_notice { position: absolute; width: 100%; height: 100%; left: 0; top: 0; font-size: 16px; }
 
 .con_list_item4 .earth_notice_wrap { position: absolute; width: 34%; height: 36%; overflow: hidden; right: 3.3%; bottom: 10%; }
@@ -346,7 +358,7 @@
 
 .main_bot { margin-top: -70px; padding-bottom: 160px; position: relative; z-index: 10; }
 
-@media (max-width: 767px) { .main_bot { margin-top: 0; } }
+@media (max-width: 767px) { .main_bot { margin-top: 0; padding-bottom: 40px; } }
 
 .main_board { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
@@ -373,6 +385,20 @@
 .main_board .main_list li a { padding-left: 10px; position: relative; display: block; font-size: 14px; line-height: 20px; color: #666; }
 
 .main_board .main_list li a::before { content: '·'; position: absolute; left: 0; top: 0; }
+
+.main_banner { overflow: hidden; margin-top: 40px; }
+
+.main_banner_link { display: block; border-radius: 12px; overflow: hidden; }
+
+.main_banner_img { width: 100%; }
+
+.main_banner_img.ty_m { display: none; }
+
+@media (max-width: 767px) { .main_banner_img.ty_m { display: block; }
+  .main_banner_img.ty_pc { display: none; } }
+
+@media (max-width: 767px) { .main_banner { overflow: visible; margin: 30px -5px 0; }
+  .main_banner_item { padding: 0 5px; -webkit-box-sizing: border-box; box-sizing: border-box; } }
 
 @media (max-width: 1920px) { .con_list_item { background-size: cover; } }
 
