--- a/common/scss/_main.scss
+++ b/common/scss/_main.scss
@@ -271,6 +271,11 @@
             }
 
             .reporter_card {
+                display: flex;
+                height: 266px;
+                align-items: center;
+                justify-content: center;
+
                 &_logo {
                     img {
                         height: 50px;
@@ -302,6 +307,65 @@
                             height: 18px;
                         }
                     }
+                }
+
+                .login_box {
+                    .img_login {
+                        height: 60px;
+                        margin-bottom: 6px;
+                    }
+                }
+                .join_box {
+                    margin-top: 15px;
+                }
+                .log_txt {
+                    font-size: 14px;
+                    line-height: 1.5;
+                    color: #666;
+                    margin-bottom: 6px;
+                }
+
+                .btn_reporter {
+                    display: block;
+                    width: 100%;
+                    height: 40px;
+                    background-color: #ff5050;
+                    box-sizing: border-box;
+                    border-radius: 6px;
+                    color: #fff;
+                    font-size: 14px;
+                    font-weight: bold;
+                    background-position: 17px center;
+                    background-repeat: no-repeat;
+                    background-size: 24px;
+                }
+                .btn_login {
+                    display: block;
+                    width: 100%;
+                    height: 40px;
+                    background-color: #f6c34b;
+                    border-radius: 6px;
+                    color: #fff;
+                    font-size: 14px;
+                    font-weight: bold;
+                    background-image: url(../../images/nav_all/ico_login_small.svg);
+                    background-position: 17px center;
+                    background-repeat: no-repeat;
+                }
+                .btn_join {
+                    display: block;
+                    width: 100%;
+                    border: 1px solid #f6c34b;
+                    border-radius: 6px;
+                    height: 40px;
+                    box-sizing: border-box;
+                    line-height: 38px;
+                    background-image: url(../../images/nav_all/logo_ds.svg);
+                    background-repeat: no-repeat;
+                    background-position: 17px center;
+                    background-color: #fff;
+                    color: #424242;
+                    font-weight: bold;
                 }
             }
 
